[tool.isort]
profile = "black"
order_by_type = true

[tool.poetry]
name = "free-ssl-proxies"
version = "0.1.2"
description = "A minimal python library that scrapes ssl proxies from https://sslproxies.org."
authors=["JaminB"]
readme = "README.md"

[build-system]
requires = ["poetry-core>=1.0.0,<2.0.0"]
build-backend = "poetry.core.masonry.api"
